# UsbCameraLib

./: README.md  build.gradle.kts  settings.gradle.kts
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/java/com/rain/uvc/demo/: MainActivity.kt
app/src/main/java/com/rain/uvc/demo/base/activity/: BaseDataBindActivity.kt
app/src/main/java/com/rain/uvc/demo/camera/: CameraActivity.kt  CameraViewModel.kt
app/src/main/java/com/rain/uvc/demo/utils/: BindingAdapters.kt  CommonExt.kt  KtClickListener.kt  UsbCameraUtils.kt
app/src/main/res/drawable/: shape_item_bg.xml
app/src/main/res/layout/: activity_camera.xml  activity_main.xml  item_test_click_view.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
libusbcamera/: build.gradle
libusbcamera/src/main/: AndroidManifest.xml
libusbcamera/src/main/cpp/: CMakeLists.txt  camera_uvc.cpp
libusbcamera/src/main/cpp/camera/: ObjectArray.h  UvcCamera.h  UvcPreview.h  window.h
libusbcamera/src/main/cpp/camera/source/: UvcCamera.cpp  UvcPreview.cpp
libusbcamera/src/main/cpp/camera/state/: CameraParameterState.h
libusbcamera/src/main/cpp/libjpeg-turbo/: jconfigint.h
libusbcamera/src/main/cpp/libusb/: CMakeLists.txt  core.c  libusbi.h
libusbcamera/src/main/cpp/libuvc/include/libuvc/: libuvc.h  libuvc_config.h
libusbcamera/src/main/cpp/libuvc/src/: device.c  stream.c
libusbcamera/src/main/cpp/log/: Log.h
libusbcamera/src/main/java/com/rain/uvc/: UvcCamera.java  UvcCameraHelper.java
libusbcamera/src/main/java/com/rain/uvc/listener/: ICameraOpenListener.java  IDetachedCloseListener.java  IFrameListener.java
libusbcamera/src/main/java/com/rain/uvc/mode/: PreviewModeState.java  SupportSize.java
libusbcamera/src/main/java/com/rain/uvc/provider/: OverallContext.java  OverallContextProvider.java
libusbcamera/src/main/java/com/rain/uvc/state/: CameraNativeState.java  CameraNativeTypeNumber.java  CameraRangeState.java  OrientationState.java
libusbcamera/src/main/java/com/rain/uvc/utils/: CameraNativeUtils.java
(+3 files in other folders)
